Closed Bug 335872 Opened 18 years ago Closed 18 years ago

<menupopup> within <toolbarbutton> ignores position

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: pamg.bugs, Assigned: enndeakin)

References

Details

(Keywords: fixed1.8.1, testcase)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20060426 BonEcho/2.0a1
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20060426 BonEcho/2.0a1

A <menupopup> inside a <toolbarbutton type="menu-button"> always appears after_start, aligned with the whole button's left edge, no matter what the position property of the menupopup is.

Reproducible: Always

Steps to Reproduce:
Load attached test case.

Actual Results:  
Menu appears aligned with the left edge of "Long Menu Label Text".

Expected Results:  
Menu should appear aligned with the right edge of the button/dropdown combination, due to the position="after_end" property.
Attachment #220187 - Attachment mime type: text/plain → application/vnd.mozilla.xul+xml
Keywords: testcase
Blocks: 336555
Blocks: 336868
From Comment #2 of bug 336868, concerning a <menupopup position="after_end"> within a <toolbarbutton type="menu-button">:

Mac trunk and 1.8 branch: popup always appears to the right, although it's
specified to open to the left.  Linux 1.8 branch: popup always appears to the
left.  (Linux trunk not tested.) Windows trunk and branch: popup appears to the left the first time each session, then to the right thereafter. 

All nightly builds from 2006-05-08.
Neil, this is bug I was talking about..
Assignee: nobody → enndeakin
This patch can be for the branch if desired.
Attachment #224756 - Flags: superreview?(roc)
Attachment #224756 - Flags: review?(roc)
Thanks, applying this to the branch is definitely desired.
Attachment #224756 - Flags: superreview?(roc)
Attachment #224756 - Flags: superreview+
Attachment #224756 - Flags: review?(roc)
Attachment #224756 - Flags: review+
I see this has all its reviews.  Is it waiting for anything more before it's landed?
It's already been checked in on the trunk.
Excellent.  Is there any reason not to check it into the 1.8 branch now too?
Attachment #224756 - Flags: approval1.8.1?
Attachment #224756 - Flags: approval1.8.1? → approval1.8.1+
Landed on branch; not marking as fixed even though it appears to have landed on trunk too, since Neil may have had some other reason for leaving that.

fixed-1.8-branch, fixed-on-trunk
Keywords: fixed1.8.1
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: