Bug 335872: <menupopup> within <toolbarbutton> ignores position.  Patch by enndeakin@sympatico.ca, r+sr=roc, a181=mtschrep