mozilla/layout/xul/base/src/nsMenuFrame.h
@@ -188,6 +188,8 @@ protected:
 
   virtual void RePositionPopup(nsBoxLayoutState& aState);
 
+  void  ConvertPosition(nsIContent* aPopupElt, nsString& aAnchor, nsString& aAlign);
+
   static void UpdateDismissalListener(nsIMenuParent* aMenuParent);
   void UpdateMenuType(nsPresContext* aPresContext);
   void UpdateMenuSpecialState(nsPresContext* aPresContext);
